2002-07-19	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* startup/Makefile.am: Add bsplib_DATA = linkcmds.

2002-07-04	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* wrapup/Makefile.am: Eliminate TMPINSTALL_FILES.
	Remove $(OBJS) from all-local.

2002-07-04	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* wrapup/Makefile.am: Add $(LIB) to all-local.

2002-06-29	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* wrapup/Makefile.am: Remove preinstallation of libbsp.a,

2002-03-27	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac:
	AC_INIT(package,_RTEMS_VERSION,_RTEMS_BUGS).
	AM_INIT_AUTOMAKE([no-define foreign 1.6]).
	* clock/Makefile.am: Remove AUTOMAKE_OPTIONS.
	* Makefile.am: Remove AUTOMAKE_OPTIONS.
	* console/Makefile.am: Remove AUTOMAKE_OPTIONS.
	* include/Makefile.am: Remove AUTOMAKE_OPTIONS.
	* start/Makefile.am: Remove AUTOMAKE_OPTIONS.
	* startup/Makefile.am: Remove AUTOMAKE_OPTIONS.
	* wrapup/Makefile.am: Remove AUTOMAKE_OPTIONS.

2002-01-03	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* console/console-io.c: Include rtems/bspIo.h instead of bspIo.h.

2001-12-22	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* bsp_specs: Replace -lrtemsall with -lrtemsbsp -lrtemscpu,
	replace -lrtemsall_g with -lrtemsbsp_g -lrtemscpu_g.

2001-12-22	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* bsp_specs: Replace -lrtemsall with -lrtemsbsp -lrtemscpu,
	replace -lrtemsall_g with -lrtemsbsp_g -lrtemscpu_g.

2001-11-30	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Introduce RTEMS_BSP_CONFIGURE.

2001-10-12	Joel Sherrill <joel@OARcorp.com>

	* console/console-io.c: Fixed typo.

2001-10-11	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* .cvsignore: Add autom4te.cache for autoconf > 2.52.
	* configure.in: Remove.
	* configure.ac: New file, generated from configure.in by autoupdate.

2001-09-27	Joel Sherrill <joel@OARcorp.com>

	* include/bsp.h: Renamed delay() to rtems_bsp_delay().

2001-09-27	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* include/Makefile.am: Use 'CLEANFILES ='.