@@ -2,9 +2,6 @@
 ## $Id$
 ##
 
-
-PGM = $(ARCH)/start.o
-
 C_FILES = start.c
 C_O_FILES = $(C_FILES:%.c=$(ARCH)/%.o)
 
@@ -18,7 +15,9 @@ include $(top_srcdir)/../../../../../../automake/lib.am
 # (OPTIONAL) Add local stuff here using +=
 #
 
-$(PROJECT_RELEASE)/lib/start$(LIB_VARIANT).o: $(PGM)
+bsplib_DATA = $(PROJECT_RELEASE)/lib/start$(LIB_VARIANT).o
+
+$(PROJECT_RELEASE)/lib/start$(LIB_VARIANT).o: $(ARCH)/start.o
 	$(INSTALL_DATA) $< $@
 
 $(PROJECT_RELEASE)/lib/except_vect_332_ROM$(LIB_VARIANT).o: \
@@ -57,9 +56,9 @@ TMPINSTALL_FILES += $(PROJECT_RELEASE)/lib/start$(LIB_VARIANT).o \
     $(PROJECT_RELEASE)/lib/ram_init_FW$(LIB_VARIANT) \
     $(PROJECT_RELEASE)/lib/except_vect_332_ROM$(LIB_VARIANT).o
 
-all-local: $(ARCH) $(OBJS) $(PGM) $(TMPINSTALL_FILES)
+all-local: $(ARCH) $(OBJS) $(ARCH)/start.o $(TMPINSTALL_FILES)
 
-.PRECIOUS: $(PGM)
+.PRECIOUS: $(ARCH)/start.o
 
 EXTRA_DIST = start.c except_vect_332_ROM.S ram_init.ld ram_init.sed
 
