@@ -1,3 +1,8 @@
+2002-07-21	Ralf Corsepius <corsepiu@faw.uni-ulm.de>
+
+	* start/Makefile.am: Eliminate PGM.
+	Add bsplib_DATA = $(PROJECT_RELEASE)/lib/start$(LIB_VARIANT).o.
+
 2002-07-19	Ralf Corsepius <corsepiu@faw.uni-ulm.de>
 
 	* startup/Makefile.am: Add bsplib_DATA = linkcmds linkcmds_ROM.
